2013-06-04  Eric Botcazou  <ebotcazou@adacore.com>

	* expmed.c (extract_bit_field_1): In the larger-than-a-word case, factor
	out the processing order as in store_bit_field_1.

2013-06-04  Jan Hubicka  <jh@suse.cz>

	PR middle-end/57500
	* cgraphunit.c (cgraph_process_same_body_aliases): Create
	non-VAR_DECL node if it does not exist yet.

2013-06-03  Richard Sandiford  <rdsandiford@googlemail.com>

	* config.gcc (mipsisa64sr71k-*-elf*, mipsisa64sb1-*-elf*)
	(mipsisa64sb1el-*-elf*, mips64-*-elf*, mips64el-*-elf*)
	(mips64orion-*-elf*, mips64orionel-*-elf*): Remove
	target_cpu_default setting.

2013-06-03  Teresa Johnson  <tejohnson@google.com>

	* dumpfile.c (opt_info_switch_p): Change -fopt-info
	default to -fopt-info=optimized instead of all.
	* doc/invoke.texi: Ditto.
	* tree-vectorizer.c (vectorize_loops): Emit loop vectorization
	success under MSG_OPTIMIZED_LOCATIONS, and use dump_printf_loc.
	(execute_vect_slp): Emit BB vectorization success under
	MSG_OPTIMIZED_LOCATIONS.
	* tree-vect-slp.c (vect_slp_transform_bb): Change
	MSG_OPTIMIZED_LOCATIONS to MSG_NOTE.
	* tree-vect-loop.c (vect_transform_loop): Ditto.

2013-06-03  Jason Merrill  <jason@redhat.com>

	PR c++/57415
	* config/rs6000/rs6000-c.c (altivec_resolve_overloaded_builtin):
	Use TARGET_EXPR for C++.

2013-06-03  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/57268
	* sched-deps.c (sched_analyze_2): Don't flush_pending_lists
	if DEBUG_INSN_P (insn).

	Reapply
	2013-05-31  Dinar Temirbulatov  <dinar@kugelworks.com>

	PR rtl-optimization/57268
	* sched-deps.c (sched_analyze_2): Flush dependence lists if
	the sum of the read and write lists exceeds MAX_PENDING_LIST_LENGTH.

2013-06-03  Yuri Rumyantsev  <yuri.s.rumyantsev@intel.com>

	* config/i386/i386.c (ix86_lea_outperforms): Fix formatting.
	(ix86_avoid_lea_for_addr): Likewise.
	(exact_dependency_1): Likewise.
	(ix86_adjust_cost): Likewise.
	(swap_top_of_ready_list): Fix formatting and !reload_completed check
	removed.